--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -17,14 +17,14 @@
     specific language governing permissions and limitations
     under the License.
 -->
-<html ng-app="Ping">
+<html ng-app="Learning">
     <head>
         <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/style.css" />
-        <title>Ping</title>
+        <title>Learning</title>
     </head>
 
     <body>
@@ -37,7 +37,7 @@
         <script type="text/javascript" src="js/TTSPlugin.js"></script>
 
         <!--Module-->
-        <script type="text/javascript" src="app.js"></script>
+        <script type="text/javascript" src="app/app.js"></script>
 
         <script type="text/javascript" src="phonegap.js"></script>
         <!--
@@ -59,12 +59,12 @@
         <script type="text/javascript" src="lib/angular/angular-touch.min.js"></script>
         -->
         <!--controllers-->
-        <script type="text/javascript" src="controllers/mainCtrl.js"></script>
-        <script type="text/javascript" src="controllers/wordCtrl.js"></script>
+        <script type="text/javascript" src="app/controllers/mainCtrl.js"></script>
+        <script type="text/javascript" src="app/controllers/wordCtrl.js"></script>
 
         <!--services-->
-        <script type="text/javascript" src="services/wordService.js"></script>
-        <script type="text/javascript" src="services/stateService.js"></script>
+        <script type="text/javascript" src="app/services/wordService.js"></script>
+        <script type="text/javascript" src="app/services/stateService.js"></script>
 
         <script type="text/javascript" src="js/index.js"></script>
 
