--- a/www/index.html
+++ b/www/index.html
@@ -37,7 +37,7 @@
         <script type="text/javascript" src="js/TTSPlugin.js"></script>
 
         <!--Module-->
-        <script type="text/javascript" src="app/app.js"></script>
+        <script type="text/javascript" src="app.js"></script>
 
         <script type="text/javascript" src="phonegap.js"></script>
         <!--
@@ -59,12 +59,12 @@
         <script type="text/javascript" src="lib/angular/angular-touch.min.js"></script>
         -->
         <!--controllers-->
-        <script type="text/javascript" src="app/controllers/mainCtrl.js"></script>
-        <script type="text/javascript" src="app/controllers/wordCtrl.js"></script>
+        <script type="text/javascript" src="controllers/mainCtrl.js"></script>
+        <script type="text/javascript" src="controllers/wordCtrl.js"></script>
 
         <!--services-->
-        <script type="text/javascript" src="app/services/wordService.js"></script>
-        <script type="text/javascript" src="app/services/stateService.js"></script>
+        <script type="text/javascript" src="services/wordService.js"></script>
+        <script type="text/javascript" src="services/stateService.js"></script>
 
         <script type="text/javascript" src="js/index.js"></script>
 
